@@ -1120,7 +1120,46 @@ lambda|->
 block|{
 name|String
 name|key
-init|=
+decl_stmt|;
+if|if
+condition|(
+name|doc
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|1
+operator|&&
+name|f
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|MetricUtils
+operator|.
+name|VALUE
+argument_list|)
+condition|)
+block|{
+comment|// only one "value" field - skip the unnecessary field name
+name|key
+operator|=
+name|MetricRegistry
+operator|.
+name|name
+argument_list|(
+name|labelId
+argument_list|,
+name|metricName
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|key
+operator|=
 name|MetricRegistry
 operator|.
 name|name
@@ -1134,7 +1173,8 @@ operator|.
 name|getName
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
 name|MetricRegistry
 name|registry
 init|=
@@ -1148,15 +1188,11 @@ decl_stmt|;
 name|AggregateMetric
 name|metric
 init|=
-name|getOrRegister
+name|getOrCreate
 argument_list|(
 name|registry
 argument_list|,
 name|key
-argument_list|,
-operator|new
-name|AggregateMetric
-argument_list|()
 argument_list|)
 decl_stmt|;
 name|Object
@@ -1199,19 +1235,16 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|getOrRegister
+DECL|method|getOrCreate
 specifier|private
 name|AggregateMetric
-name|getOrRegister
+name|getOrCreate
 parameter_list|(
 name|MetricRegistry
 name|registry
 parameter_list|,
 name|String
 name|name
-parameter_list|,
-name|AggregateMetric
-name|add
 parameter_list|)
 block|{
 name|AggregateMetric
@@ -1241,6 +1274,13 @@ return|return
 name|existing
 return|;
 block|}
+name|AggregateMetric
+name|add
+init|=
+operator|new
+name|AggregateMetric
+argument_list|()
+decl_stmt|;
 try|try
 block|{
 name|registry
