@@ -1025,6 +1025,11 @@ argument_list|(
 name|reporterId
 argument_list|)
 operator|.
+name|setCompact
+argument_list|(
+literal|true
+argument_list|)
+operator|.
 name|cloudClient
 argument_list|(
 literal|false
