@@ -820,6 +820,11 @@ specifier|private
 name|boolean
 name|cloudClient
 decl_stmt|;
+DECL|field|compact
+specifier|private
+name|boolean
+name|compact
+decl_stmt|;
 DECL|field|params
 specifier|private
 name|SolrParams
@@ -914,6 +919,12 @@ literal|false
 expr_stmt|;
 name|this
 operator|.
+name|compact
+operator|=
+literal|true
+expr_stmt|;
+name|this
+operator|.
 name|params
 operator|=
 literal|null
@@ -954,6 +965,26 @@ operator|.
 name|cloudClient
 operator|=
 name|cloudClient
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+comment|/**      * If true then use "compact" data representation.      * @param compact compact representation.      * @return {@code this}      */
+DECL|method|setCompact
+specifier|public
+name|Builder
+name|setCompact
+parameter_list|(
+name|boolean
+name|compact
+parameter_list|)
+block|{
+name|this
+operator|.
+name|compact
+operator|=
+name|compact
 expr_stmt|;
 return|return
 name|this
@@ -1122,6 +1153,8 @@ argument_list|,
 name|skipAggregateValues
 argument_list|,
 name|cloudClient
+argument_list|,
+name|compact
 argument_list|)
 return|;
 block|}
@@ -1176,6 +1209,11 @@ DECL|field|cloudClient
 specifier|private
 name|boolean
 name|cloudClient
+decl_stmt|;
+DECL|field|compact
+specifier|private
+name|boolean
+name|compact
 decl_stmt|;
 DECL|field|params
 specifier|private
@@ -1348,6 +1386,9 @@ name|skipAggregateValues
 parameter_list|,
 name|boolean
 name|cloudClient
+parameter_list|,
+name|boolean
+name|compact
 parameter_list|)
 block|{
 name|super
@@ -1501,6 +1542,12 @@ operator|.
 name|cloudClient
 operator|=
 name|cloudClient
+expr_stmt|;
+name|this
+operator|.
+name|compact
+operator|=
+name|compact
 expr_stmt|;
 name|this
 operator|.
@@ -1812,7 +1859,7 @@ name|skipHistograms
 argument_list|,
 name|skipAggregateValues
 argument_list|,
-literal|false
+name|compact
 argument_list|,
 name|metadata
 argument_list|,
