@@ -229,6 +229,12 @@ name|QT
 argument_list|,
 literal|"/admin/metrics"
 argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
+argument_list|,
 name|CommonParams
 operator|.
 name|WT
@@ -442,6 +448,12 @@ name|QT
 argument_list|,
 literal|"/admin/metrics"
 argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
+argument_list|,
 name|CommonParams
 operator|.
 name|WT
@@ -534,6 +546,12 @@ name|QT
 argument_list|,
 literal|"/admin/metrics"
 argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
+argument_list|,
 name|CommonParams
 operator|.
 name|WT
@@ -625,6 +643,12 @@ operator|.
 name|QT
 argument_list|,
 literal|"/admin/metrics"
+argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
 argument_list|,
 name|CommonParams
 operator|.
@@ -721,6 +745,12 @@ name|QT
 argument_list|,
 literal|"/admin/metrics"
 argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
+argument_list|,
 name|CommonParams
 operator|.
 name|WT
@@ -811,6 +841,12 @@ operator|.
 name|QT
 argument_list|,
 literal|"/admin/metrics"
+argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
 argument_list|,
 name|CommonParams
 operator|.
@@ -906,6 +942,12 @@ operator|.
 name|QT
 argument_list|,
 literal|"/admin/metrics"
+argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
 argument_list|,
 name|CommonParams
 operator|.
@@ -1009,6 +1051,12 @@ operator|.
 name|QT
 argument_list|,
 literal|"/admin/metrics"
+argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
 argument_list|,
 name|CommonParams
 operator|.
@@ -1154,6 +1202,12 @@ name|QT
 argument_list|,
 literal|"/admin/metrics"
 argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
+argument_list|,
 name|CommonParams
 operator|.
 name|WT
@@ -1285,7 +1339,9 @@ literal|"property"
 argument_list|,
 literal|"entries_count"
 argument_list|,
-literal|"compact"
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
 argument_list|,
 literal|"true"
 argument_list|)
@@ -1400,6 +1456,12 @@ name|QT
 argument_list|,
 literal|"/admin/metrics"
 argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
+argument_list|,
 name|CommonParams
 operator|.
 name|WT
@@ -1474,6 +1536,12 @@ operator|.
 name|QT
 argument_list|,
 literal|"/admin/metrics"
+argument_list|,
+name|MetricsHandler
+operator|.
+name|COMPACT_PARAM
+argument_list|,
+literal|"false"
 argument_list|,
 name|CommonParams
 operator|.
